# y

./: .gitignore  CMakeLists.txt  FindPython_ROOT.cmake
data/iga/: NURBS_data.pkl
data/nurbs/: B_data.pkl  N_curve_data.pkl  N_surface_data.mat  N_surface_data.pkl  dB_data.mat  dB_data.pkl
doc/: matplotlib使用的问题.md  mayavi使用的问题.md  python.md
matlab/: styleset.m
matlab/nurbs/: plot_N_surface.m
src/: CMakeLists.txt
src/iga/: CMakeLists.txt  main.cpp  plots.py
src/links/: pys.h
src/nurbs/: CMakeLists.txt  bs.cpp  bs.h  nurbs.cpp  nurbs.h  nurbs_test.cpp  plot_3D.py  plots.py
